semantic/src/test_cases/good/test10.cl
(* Rules for loops *)

class A {
    a : Bool;
    b : Int;
    f1() : Int {
        {
             while a loop b <- b+1 pool;
             0;
        }
    };
};

class Main {
    main() : Int {
        0
    };
};
